--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -7,6 +7,11 @@
         grid-template-columns: 650px 425px;
         column-gap: 25px;
         align-items: start;
+        position: relative;
+        &__sidebar {
+            position: sticky;
+            top: 15px;
+        }
     }
     &__grid {
         display: grid;
